# TEE-Rust

./: .gitignore  Cargo.toml  README.md  flake.nix  main.rs
.cargo/: config.toml
conjugate_coding/: Cargo.toml
conjugate_coding/src/conjugate_coding/: mod.rs
conjugate_coding_library/: Cargo.toml
conjugate_coding_library/src/: lib.rs
conjugate_coding_library/src/conjugate_coding/: mod.rs
examples/esp32c6-Hello-World/: Cargo.toml
examples/esp32c6-Hello-World/src/: main.rs
examples/tee_aes/esp32c6/: Cargo.toml
examples/tee_aes/esp32c6/src/: main.rs
examples/tee_aes/measurement_serializer/: Cargo.toml
examples/tee_aes/measurement_serializer/src/: main.rs
examples/tee_aes/preparation_serializer/: Cargo.toml
examples/tee_aes/preparation_serializer/src/: main.rs
examples/tee_unencrypted/esp32c6/src/: main.rs
examples/tee_unencrypted/preparation_serializer/: Cargo.toml
examples/tee_unencrypted/preparation_serializer/src/: main.rs
src/: lib.rs  main.rs
src/conjugate_coding/: mod.rs
utilities/measurement_serializer/: Cargo.toml
utilities/measurement_serializer/src/: main.rs
utilities/preparation_serializer/: Cargo.toml
utilities/preparation_serializer/src/: main.rs
