[package]
name = "tee-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-alloc = "0.6.0"
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-println = { version = "0.13.0", features = [
    "esp32c3",
    "log",
    "defmt-espflash",
] }
defmt = "0.3.10"
embedded-io         = { version = "0.6.1", default-features = false }
conjugate_coding = { path = "./conjugate_coding" }
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }
