[package]
name = "conjugate_coding"
version = "0.1.0"
edition = "2021"

[features]
std = []
no_std = []
debug = []

[dependencies]
esp-println = { version = "0.13.0", features = ["esp32c3"] }
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive", "alloc"] }
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }

[lib]
test = false
doctest = false
bench = false