[package]
name = "tee-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

# Esp dependencies
esp-alloc = "0.6.0"
esp-hal = { version = "0.23.1", features = [
    "esp32c6",
    "unstable",
] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "defmt",
] }

# USB device and serial dependencies
esp-println = { version = "0.13.0", features = [
    "esp32c6",
    "log",
    "defmt-espflash",
] }

defmt = "0.3.10"
embedded-io         = { version = "0.6.1", default-features = false }
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }

# Conjugate coding
conjugate_coding = { path = "../../conjugate_coding_library" }
serde_json = { version = "1.0.138", default-features = false, features = ["alloc"] }
