[package]
name = "preparation_serializer"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"

secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive", "alloc"] }
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }
hex = "0.4"

# Conjugate coding
conjugate_coding = { path = "../../conjugate_coding_library", features = [ "std" ] }

# Serialization/Deserialization
serde_json = { version = "1.0.138"}
text_io = "0.1.12"
