[package]
name = "preparation_serializer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Logging
env_logger = "0.11.6"
log = "0.4.25"

# Memory safety
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive", "alloc"] }

# Capturing input
text_io = "0.1.12"

# Serialization/Deserialization
serde = { version = "1.0.217",  default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138"}
hex = "0.4"

# Conjugate coding
conjugate_coding = { path = "../../conjugate_coding_library", features = [ "std" ] }